{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 40,
  "lineage": "d575669e-cab0-db2f-581f-79b680d6d79d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_connection",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3876184001",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e8e4c776c2f78424",
            "security_group_rule_id": "sgr-035d62baf78bff4ed",
            "self": false,
            "source_security_group_id": "sg-0a22143682acb51af",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_web.aws_security_group.sg",
            "module.sg_app_server.aws_security_group.sg",
            "module.sg_rds.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.app-alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:277741577842:loadbalancer/app/tf-apptier-alb/7784af9cd98c7e23",
            "arn_suffix": "app/tf-apptier-alb/7784af9cd98c7e23",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-tf-apptier-alb-859815157.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:277741577842:loadbalancer/app/tf-apptier-alb/7784af9cd98c7e23",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-apptier-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02c368967fbd89395"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-082c0f571f7b3e706"
              },
              {
                "subnet_id": "subnet-0dbed1bf1984fc170"
              }
            ],
            "subnets": [
              "subnet-082c0f571f7b3e706",
              "subnet-0dbed1bf1984fc170"
            ],
            "tags": {
              "Kind": "practice",
              "Name": "tf-apptier-alb"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-apptier-alb"
            },
            "vpc_id": "vpc-02d9ece77d4d1e696",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_app.aws_security_group.sg",
            "module.subnet-priv-1a.aws_subnet.subnet",
            "module.subnet-priv-1b.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.appTier-tg",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:277741577842:targetgroup/tf-appTier-tg/d2170a33193d9982",
            "arn_suffix": "targetgroup/tf-appTier-tg/d2170a33193d9982",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:277741577842:targetgroup/tf-appTier-tg/d2170a33193d9982",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-appTier-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Kind": "practice",
              "Name": "tf-apptier-tg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-apptier-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02d9ece77d4d1e696"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.eip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065ff0b7aa44d2b81",
            "domain": "vpc",
            "id": "eipalloc-065ff0b7aa44d2b81",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-52-11-143-223.us-west-2.compute.amazonaws.com",
            "public_ip": "52.11.143.223",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Kind": "practice",
              "Name": "tf-eip-1"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.http_listener_app",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:277741577842:listener/app/tf-apptier-alb/7784af9cd98c7e23/a665f71545c2e5df",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:277741577842:targetgroup/tf-appTier-tg/d2170a33193d9982",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:277741577842:listener/app/tf-apptier-alb/7784af9cd98c7e23/a665f71545c2e5df",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:277741577842:loadbalancer/app/tf-apptier-alb/7784af9cd98c7e23",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app-alb.aws_lb.my_alb",
            "module.appTier-tg.aws_lb_target_group.tg",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_app.aws_security_group.sg",
            "module.subnet-priv-1a.aws_subnet.subnet",
            "module.subnet-priv-1b.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.http_listener_web",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:277741577842:listener/app/tf-webtier-alb/2bd491c89075152c/7dd85d3d40a9c4ce",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:277741577842:targetgroup/tf-webTier-tg/86c51fb8440caea7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:277741577842:listener/app/tf-webtier-alb/2bd491c89075152c/7dd85d3d40a9c4ce",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:277741577842:loadbalancer/app/tf-webtier-alb/2bd491c89075152c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_web.aws_security_group.sg",
            "module.subnet-pub-1a.aws_subnet.subnet",
            "module.subnet-pub-1b.aws_subnet.subnet",
            "module.web-alb.aws_lb.my_alb",
            "module.webTier-tg.aws_lb_target_group.tg"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:internet-gateway/igw-045116d7ea8df1a04",
            "id": "igw-045116d7ea8df1a04",
            "owner_id": "277741577842",
            "tags": {
              "Kind": "practice",
              "Name": "tf-igw"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-igw"
            },
            "vpc_id": "vpc-02d9ece77d4d1e696"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:vpc/vpc-02d9ece77d4d1e696",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-033b96ac2d7053e9e",
            "default_route_table_id": "rtb-0321189a952f9366c",
            "default_security_group_id": "sg-0b15b218e79d83ed2",
            "dhcp_options_id": "dopt-0bd0b9e52d54fe088",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02d9ece77d4d1e696",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0321189a952f9366c",
            "owner_id": "277741577842",
            "tags": {
              "Kind": "practice",
              "Name": "tf-vpc"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065ff0b7aa44d2b81",
            "association_id": "eipassoc-018b6cdf0e61e3323",
            "connectivity_type": "public",
            "id": "nat-0ed0c058b8ecc8ba9",
            "network_interface_id": "eni-00324b1de2816e139",
            "private_ip": "172.16.1.88",
            "public_ip": "52.11.143.223",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02cdf30352a50f14b",
            "tags": {
              "Kind": "practice",
              "Name": "tf-nat-1"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-nat-1"
            }
          },
          "dependencies": [
            "module.eip.aws_eip.my_eip",
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.subnet-pub-1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.private_rt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:route-table/rtb-0966bca42d58d2fe5",
            "id": "rtb-0966bca42d58d2fe5",
            "owner_id": "277741577842",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0ed0c058b8ecc8ba9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Kind": "practice",
              "Name": "tf-rt-private"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d9ece77d4d1e696"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eip.aws_eip.my_eip",
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.nat.aws_nat_gateway.my_nat",
            "module.subnet-pub-1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.public_rt",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:route-table/rtb-088076dbb9a5bd6ed",
            "id": "rtb-088076dbb9a5bd6ed",
            "owner_id": "277741577842",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-045116d7ea8df1a04",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Kind": "practice",
              "Name": "tf-rt-public"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d9ece77d4d1e696"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.rt_ass_priv_1a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0814c6e01cea52d07",
            "route_table_id": "rtb-0966bca42d58d2fe5",
            "subnet_id": "subnet-0dbed1bf1984fc170"
          },
          "dependencies": [
            "module.eip.aws_eip.my_eip",
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.nat.aws_nat_gateway.my_nat",
            "module.private_rt.aws_route_table.my_rt",
            "module.subnet-priv-1a.aws_subnet.subnet",
            "module.subnet-pub-1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.rt_ass_priv_1b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c262a423fa0a269",
            "route_table_id": "rtb-0966bca42d58d2fe5",
            "subnet_id": "subnet-082c0f571f7b3e706"
          },
          "dependencies": [
            "module.eip.aws_eip.my_eip",
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.nat.aws_nat_gateway.my_nat",
            "module.private_rt.aws_route_table.my_rt",
            "module.subnet-priv-1b.aws_subnet.subnet",
            "module.subnet-pub-1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.rt_ass_pub_1a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a876686d1cffb10",
            "route_table_id": "rtb-088076dbb9a5bd6ed",
            "subnet_id": "subnet-02cdf30352a50f14b"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.public_rt.aws_route_table.my_rt",
            "module.subnet-pub-1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.rt_ass_pub_1b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba73d5c2acccbdf7",
            "route_table_id": "rtb-088076dbb9a5bd6ed",
            "subnet_id": "subnet-02ee244a39da85b15"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.public_rt.aws_route_table.my_rt",
            "module.subnet-pub-1b.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.rt_ass_rds_priv_1a",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04178a348906d1002",
            "route_table_id": "rtb-0966bca42d58d2fe5",
            "subnet_id": "subnet-057d7a7298d978eb2"
          },
          "dependencies": [
            "module.eip.aws_eip.my_eip",
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.nat.aws_nat_gateway.my_nat",
            "module.private_rt.aws_route_table.my_rt",
            "module.subnet-pub-1a.aws_subnet.subnet",
            "module.subnet-rds-priv-1a.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.rt_ass_rds_priv_1b",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd44d233c158374b",
            "route_table_id": "rtb-0966bca42d58d2fe5",
            "subnet_id": "subnet-0d2e91d109126a5c7"
          },
          "dependencies": [
            "module.eip.aws_eip.my_eip",
            "module.igw.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.nat.aws_nat_gateway.my_nat",
            "module.private_rt.aws_route_table.my_rt",
            "module.subnet-pub-1a.aws_subnet.subnet",
            "module.subnet-rds-priv-1b.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.sg_alb_app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:security-group/sg-02c368967fbd89395",
            "description": " SG for APP ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c368967fbd89395",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow on 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow on 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-alb-sg",
            "name_prefix": "",
            "owner_id": "277741577842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Kind": "practice",
              "Name": "tf-app-alb-sg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-app-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d9ece77d4d1e696"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg_alb_web",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:security-group/sg-0d9d6e289c144b011",
            "description": " SG for WEB ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9d6e289c144b011",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow on 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow on 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-alb-sg",
            "name_prefix": "",
            "owner_id": "277741577842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Kind": "practice",
              "Name": "tf-web-alb-sg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-web-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d9ece77d4d1e696"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg_app_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:security-group/sg-0e8e4c776c2f78424",
            "description": " SG for app_server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e8e4c776c2f78424",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow on 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d9d6e289c144b011"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "allow on 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d9d6e289c144b011"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app_server-sg",
            "name_prefix": "",
            "owner_id": "277741577842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Kind": "practice",
              "Name": "tf-app_server-sg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-app_server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d9ece77d4d1e696"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_web.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.sg_rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:security-group/sg-0a22143682acb51af",
            "description": "SG for rds",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "allow",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e8e4c776c2f78424"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0a22143682acb51af",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow on 3306",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e8e4c776c2f78424"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "tf_sg_rds",
            "name_prefix": "",
            "owner_id": "277741577842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Kind": "practice",
              "Name": "tf-db-sg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d9ece77d4d1e696"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_web.aws_security_group.sg",
            "module.sg_app_server.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.sg_web_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:security-group/sg-012f2edebb33e5b12",
            "description": " SG for web_server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-012f2edebb33e5b12",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow on 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d9d6e289c144b011"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "allow on 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d9d6e289c144b011"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_server-sg",
            "name_prefix": "",
            "owner_id": "277741577842",
            "revoke_rules_on_delete": false,
            "tags": {
              "Kind": "practice",
              "Name": "tf-web_server-sg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-web_server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d9ece77d4d1e696"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_web.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-priv-1a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:subnet/subnet-0dbed1bf1984fc170",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbed1bf1984fc170",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277741577842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kind": "practice",
              "Name": "tf-priv-us-west-2a"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-priv-us-west-2a"
            },
            "vpc_id": "vpc-02d9ece77d4d1e696"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-priv-1b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:subnet/subnet-082c0f571f7b3e706",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082c0f571f7b3e706",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277741577842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kind": "practice",
              "Name": "tf-priv-us-west-2b"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-priv-us-west-2b"
            },
            "vpc_id": "vpc-02d9ece77d4d1e696"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-pub-1a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:subnet/subnet-02cdf30352a50f14b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02cdf30352a50f14b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "277741577842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kind": "practice",
              "Name": "tf-pub-us-west-2a"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-pub-us-west-2a"
            },
            "vpc_id": "vpc-02d9ece77d4d1e696"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-pub-1b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:subnet/subnet-02ee244a39da85b15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ee244a39da85b15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "277741577842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kind": "practice",
              "Name": "tf-pub-us-west-2b"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-pub-us-west-2b"
            },
            "vpc_id": "vpc-02d9ece77d4d1e696"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-rds-priv-1a",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:subnet/subnet-057d7a7298d978eb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.16.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057d7a7298d978eb2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277741577842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kind": "practice",
              "Name": "tf-priv-rds-us-west-2a"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-priv-rds-us-west-2a"
            },
            "vpc_id": "vpc-02d9ece77d4d1e696"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet-rds-priv-1b",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:277741577842:subnet/subnet-0d2e91d109126a5c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.16.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2e91d109126a5c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "277741577842",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Kind": "practice",
              "Name": "tf-priv-rds-us-west-2b"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-priv-rds-us-west-2b"
            },
            "vpc_id": "vpc-02d9ece77d4d1e696"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web-alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:277741577842:loadbalancer/app/tf-webtier-alb/2bd491c89075152c",
            "arn_suffix": "app/tf-webtier-alb/2bd491c89075152c",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-webtier-alb-696017967.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:277741577842:loadbalancer/app/tf-webtier-alb/2bd491c89075152c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-webtier-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d9d6e289c144b011"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02cdf30352a50f14b"
              },
              {
                "subnet_id": "subnet-02ee244a39da85b15"
              }
            ],
            "subnets": [
              "subnet-02cdf30352a50f14b",
              "subnet-02ee244a39da85b15"
            ],
            "tags": {
              "Kind": "practice",
              "Name": "tf-webtier-alb"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-webtier-alb"
            },
            "vpc_id": "vpc-02d9ece77d4d1e696",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.sg_alb_web.aws_security_group.sg",
            "module.subnet-pub-1a.aws_subnet.subnet",
            "module.subnet-pub-1b.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.webTier-tg",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:277741577842:targetgroup/tf-webTier-tg/86c51fb8440caea7",
            "arn_suffix": "targetgroup/tf-webTier-tg/86c51fb8440caea7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:277741577842:targetgroup/tf-webTier-tg/86c51fb8440caea7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-webTier-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Kind": "practice",
              "Name": "tf-webtier-tg"
            },
            "tags_all": {
              "Kind": "practice",
              "Name": "tf-webtier-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02d9ece77d4d1e696"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    }
  ]
}